# Broutus

./: Cargo.toml  README.md
assets/: arena.tmx  arena2.tmx  arena3.tmx  desert.tsx  dynamic.assets  map.tmx
assets/animations/: .this_is_placeholder_art
assets/maps/: arena.tmx  crushtileset.py  green.ase  simple.tmx  simple.tsx  test.tmx  tileset.tsx  tileset_1.tsx
assets/portraits/: .this_is_placeholder_art
assets/warriors/: edificadores.ron  ella.ron  freddy.ron  freddy.warrior  laminas.ron  partick.warrior  tresse.ron  ungido.ron
src/: game.rs  main.rs  tiled.rs
src/game/: character.rs  color.rs  gameplay.rs  health.rs  mod.rs  mouse_inspector.rs  ui.rs  weapon.rs  widgets.rs
src/game/gameplay/: action.rs  attribute.rs  mod.rs  team.rs  todo.rs  turn.rs  warrior.rs  weapon.rs
src/game/gameplay/warrior/: action.rs  asset.rs  attribute.rs  events.rs  mod.rs  render.rs
src/game/gameplay/warrior_new/: action.rs  asset.rs  attribute.rs  mod.rs  render.rs
src/game/gui/: arena.rs  menu.rs  mod.rs  splash.rs  widgets.rs
src/game/map/: events.rs  load.rs  mod.rs  mouse.rs  new.rs  position.rs  query.rs  tiledmap.rs
src/game/tilemap/: events.rs  load.rs  mod.rs  mouse.rs  tile_inspector.rs
src/game_old/: attributes.rs  mod.rs
src/game_old/map/: mod.rs
src/new_map_implem/: mod.rs  tiledmap.rs
src/new_map_implem/map/: events.rs  mod.rs  mouse.rs  tiledmap.rs
