[package]
name = "broutus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["render", "dynamic"] }
bevy-inspector-egui = "0.8.0"
bevy_egui = "0.11.1"
bevy_ecs_tilemap = "0.5.0"
tiled = { version = "0.9", default-features = false }
pathfinding = "3.0.10"
anyhow = "1.0.53"
