[package]
name = "broutus"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", features = ["render", "dynamic"] }
bevy_asset_loader = { version = "0.9.0", features = ["render"] }
bevy-inspector-egui = "0.8.2"
bevy_egui = "0.11.1"
tiled = { version = "0.9", default-features = false }
pathfinding = "3.0.10"
anyhow = "1.0.53"
