[package]
name = "broutus"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = ["render", "dynamic"] }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", features = ["render", "dynamic_assets"] }
bevy-inspector-egui = { version = "0.8" }
bevy_egui = { version = "0.11" }
pathfinding = { version = "3.0" }
tiled = { version = "0.9", default-features = false }
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
ron = { version = "0.7" }
